@@ -45,7 +45,7 @@ boolean is_char_ascii(integer c)
 
 boolean is_char_kanji(integer c)
 {
-    if (is_internalUPTEX()) 
+    if (is_internalUPTEX())
         return ((c >= 0)&&(c<IVS_CHAR_LIMIT));
     else
         return iskanji1(Hi(c)) && iskanji2(Lo(c));
