@@ -1,0 +1,9 @@
+ restricted \write18 enabled.
+ %&-line parsing enabled.
+**up-prim
+(./up-prim.tex 
+15: \^^c5^^93. \^^c5^^93.  
+18: \œ. \œ.  
+15: \^^c3^^a6. \^^c3^^a6.  
+18: \æ. \æ.  )
+No pages of output.
